finalizado conexão com SQLite e cruds